--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=chatapp
 # MySQL Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/chatapp?createDatabaseIfNoTExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://chat-room-db.cufg6agw82lq.us-east-1.rds.amazonaws.com:3306/chatapp?createDatabaseIfNoTExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Test@123
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA & Hibernate configuration
