--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,18 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+    			<groupId>org.owasp</groupId>
+			    <artifactId>dependency-check-maven</artifactId>
+    			<version>8.4.3</version>
+    			<executions>
+       				<execution>
+            			<goals>
+                			<goal>check</goal>
+            			</goals>
+        			</execution>
+    			</executions>
+			</plugin>
 		</plugins>
 	</build>
 
